# project_GQuest

./: .gitignore  CMakeLists.txt  README.md  first-time-startup.sh  launch.sh  launcher-wrapper  launcher.conf  makefile
documentation/: arch_gen.sh  architecture.md  tree_gen.sh
headers/game/: game.h
headers/logging/: logging.h
headers/shared/: shared.h
libs/: CMakeLists.txt
libs/gio/: CMakeLists.txt
libs/gio/src/: cli_input.c
libs/logging/: CMakeLists.txt  makefile
libs/logging/src/: logging.c
libs/objects/: CMakeLists.txt  README.md  makefile
libs/objects/include/: objects.h
libs/objects/src/: oop.c
scripts/: build-boot.sh  build-editor.sh  build-game.sh  run-editor.sh  run-game.sh
src/: CMakeLists.txt
src/devstudio/: CMakeLists.txt  bootmenu.c  confparser.c  dev.h  launcher-wrapper.c
src/editor/: CMakeLists.txt  chunk_operations.c  editor.c  editor.h  editor_menu.c  editor_window.c
src/game/: CMakeLists.txt  game.c  game.h
src/logging/: logging.c
src/shared/: cli_input.c
world_data/: _-1_0_.ck  _-1_1_.ck  _0_-1_.ck  _0_0_.ck  _0_1_.ck  _1_-1_.ck  _1_0_.ck  _1_1_.ck
